--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "jquery": "^3.7.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "css-loader": "^6.8.1",
     "eslint": "^8.48.0",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
